--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -9,5 +9,7 @@
 @custom-media --xs screen and (min-width: 0);
 @custom-media --sm screen and (min-width: 20em); /* 320px */
 @custom-media --md screen and (min-width: 48em); /* 768px */
+/* @custom-media --lg screen and (min-width: 56.25em); 900px */
 @custom-media --lg screen and (min-width: 64em); /* 1024px */
+/* @custom-media --xl screen and (min-width: 70em); 1120px */
 @custom-media --xl screen and (min-width: 90em); /* 1440px */
