--- a/src/css/site-header.css
+++ b/src/css/site-header.css
@@ -83,41 +83,152 @@
 /*---------------- FOOTER ----------------*/
 
 .footer {
+  background-color: var(--primary-color);
+}
+
+.footer-content {
   display: grid;
-  grid-template-columns: 1fr repeat(3, 20%) 1fr;
-  grid-template-rows: 1fr 20rem 1fr;
+  grid-template-columns: 1rem repeat(4, 25%) 1rem;
+  grid-template-rows: 10rem 20rem 20rem;
 
   grid-template-areas:
-    '. sponsor sponsor sponsor totop'
-    '. sponsor sponsor sponsor .'
-    '. link volg contact .';
+    '. . . . toptop'
+    '. sponsor sponsor sponsor sponsor .'
+    '. sponsor sponsor sponsor sponsor .'
+    '. link volg  . contact .';
+
+  color: var(--background-color);
+
+  .footer__link {
+    grid-area: link;
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  .footer__volg {
+    grid-area: volg;
+    grid-column: 3;
+    grid-row: 3;
+  }
+
+  .footer__contact {
+    grid-area: contact;
+    grid-column: 5;
+    grid-row: 3;
+  }
+
+  @media (--sm) {
+    display: grid;
+    grid-template-columns: repeat(2, 45%);
+    grid-template-rows: repeat(4, 20%);
+    grid-template-areas:
+      '. totop '
+      ' sponsors sponsors '
+      ' volg  .'
+      ' contact .';
+
+    .footer__link {
+      grid-area: link;
+      grid-column: 2;
+      grid-row: 3;
+    }
+
+    .footer__volg {
+      grid-area: volg;
+      grid-column: 3;
+      grid-row: 3;
+    }
+
+    .footer__contact {
+      grid-area: contact;
+      grid-column: 5;
+      grid-row: 3;
+    }
+  }
 }
 
 .footer__sponsors {
   grid-area: sponsor;
-  grid-column: 2/ 5;
-  grid-row: span 3;
+  grid-column: 2 / span 4;
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 10rem);
+  grid-template-areas:
+    ' . titel titel .'
+    'sponsors sponsors sponsors sponsors ';
+  align-items: center;
+
+  @media (--sm) {
+    grid-template-columns: 1fr repeat(2, 45%) 1fr;
+    grid-template-rows: repeat(3, 10rem);
+    grid-template-areas:
+      '. titel titel .'
+      '. sponsors sponsors .'
+      '. sponsors sponsors .';
+  }
 }
 
-.footer__link {
-  grid-area: link;
+.sponsors__titel {
+  grid-area: titel;
+  grid-column: 2 / span 2;
+  grid-row: 1;
+  align-self: center;
+  text-align: center;
 }
 
-.footer__volg {
-  grid-area: volg;
+.sponsors {
+  grid-area: sponsors;
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: 1fr;
+  grid-template-areas: '1 2 3 4 ';
+
+  grid-column: 1 / span 6;
+  grid-row: 2 / 3;
+  /*
+  @media (--sm) {
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+      '1 2'
+      '3 4 ';
+  } */
 }
 
-.footer__contact {
-  grid-area: contact;
+.een {
+  grid-area: 1;
+  grid-column: 1;
+  grid-row: 1;
+  text-align: left;
+}
+
+.twee {
+  grid-area: 2;
+  grid-column: 2;
+  grid-row: 1;
+  text-align: left;
+}
+
+.drie {
+  grid-area: 3;
+  grid-column: 3;
+  grid-row: 1;
+  text-align: left;
+}
+
+.vier {
+  grid-area: 4;
+  grid-column: 4;
+  grid-row: 1;
+  text-align: left;
 }
 
 .totop {
   grid-area: totop;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding-bottom: 10rem;
-  padding-top: 10rem;
+  grid-column: 6;
+  grid-row: 1;
+  padding-top: 2rem;
 }
 
 .totop__link {
@@ -139,35 +250,9 @@
   height: 2rem;
 }
 
-.article-sponsors {
-  text-align: center;
-}
-
-.sponsors {
-  display: flex;
-  justify-content: center;
-}
-
 .copyright {
   text-align: center;
   font-size: 1.3rem;
   padding-top: .5rem;
   padding-bottom: .5rem;
-}
-
-.footer {
-  background: var(--primary-color);
-}
-
-.footer-content {
-  color: var(--background-color);
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.footer-wrapper {
-  display: flex;
-  justify-content: space-between;
 }
