--- a/src/style.css
+++ b/src/style.css
@@ -93,4 +93,20 @@ body {
   color: var(--color-accent);
   border-bottom: .2rem solid var(--color-accent);
 }
+
+/* .grid {
+  grid-auto-flow: dense;
+
+  @media (--md) {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 2.5rem;
+    margin-bottom: 5rem;
+  }
+
+  @media (--lg) {
+    grid-gap: 4rem;
+    margin-bottom: 10rem;
+  }
+} */
 /*---------------- BUTTONS ----------------*/
