--- a/src/css/programma.css
+++ b/src/css/programma.css
@@ -66,7 +66,7 @@
 
 .header__prog {
   position: absolute;
-  top: 0;
+  top: 9rem;
   z-index: -1;
   overflow: hidden;
   width: 100%;
@@ -102,6 +102,10 @@
 
 .header__programma {
   text-align: center;
+}
+
+.header__program {
+  height: 20rem;
 }
 
 .header__image {
@@ -273,6 +277,10 @@
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   grid-gap: 4rem;
   justify-self: space-between;
+  padding-bottom: 2rem;
+
+  @media (--md) {
+  }
 
   @media (--xl) {
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -304,7 +312,7 @@
   display: grid;
   position: relative;
   grid-template-columns: 60% 1fr;
-  grid-template-rows: 50% 8% 42%;
+  grid-template-rows: 12rem 2rem 18rem;
   grid-template-areas:
     '. .'
     '. datum'
@@ -345,10 +353,10 @@
 
 .act__info {
   display: grid;
-  align-items: center;
+  align-content: end;
   grid-area: info;
   width: 32rem;
-  height: 28rem;
+  height: 18rem;
   grid-template-columns: 30rem;
   grid-template-rows: repeat(3, 3.6rem);
   grid-template-areas:
