--- a/src/css/site-header.css
+++ b/src/css/site-header.css
@@ -1,20 +1,75 @@
 /*---------------- NAVIGATIE ----------------*/
 
-.header {
+.topbar {
+  display: none;
+  background: var(--primary-color);
+
+  @media (--lg) {
+    display: unset;
+  }
+}
+
+.topright {
   display: flex;
   justify-content: space-between;
-  padding-top: 2rem;
+  align-items: center;
+  color: var(--background-color);
+  background: var(--primary-color);
+  height: 4rem;
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.navigatie {
-  width: 40rem;
-  height: 5rem;
-  list-style-type: none;
+.header__top {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: var(--background-color);
+
+  @media (--lg) {
+    background-color: rgba(255, 255, 255, 0);
+  }
+}
+
+.burger__menu {
+  background-color: var(--background-color);
+}
+
+.navigatie {
+  width: 32rem;
+  height: 35rem;
+  list-style-type: none;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--background-color);
+  padding-bottom: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  @media (--md) {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-evenly;
+    height: 10rem;
+    width: 560px;
+    left: 218px;
+  }
+
+  @media (--lg) {
+    position: relative;
+    left: 0;
+    top: 0;
+    padding-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: rgba(255, 255, 255, 0);
+  }
 }
 
 .nav {
@@ -48,21 +103,6 @@
   color: var(--color-accent);
 }
 
-.topbar {
-  background: var(--primary-color);
-}
-
-.topright {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--background-color);
-  background: var(--primary-color);
-  height: 4rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .social {
   background: var(--primary-color);
 }
@@ -81,10 +121,15 @@
 }
 
 /*---------------- HAMBURGER ----------------*/
-
+/*
 .burger {
   background-color: var(--background-color);
-}
+  visibility: visible;
+
+  @media (--md) {
+    display: none;
+  }
+} */
 
 .burger__header {
   display: flex;
@@ -116,7 +161,15 @@
 .klik {
   position: absolute;
   visibility: visible;
-  top: 10rem;
+  top: 9rem;
+  left: 0;
+  height: 35rem;
+
+  @media (--md) {
+    width: 768px;
+    left: 0;
+    height: 10rem;
+  }
 }
 
 .menu-icon {
@@ -124,6 +177,10 @@
   width: 60px;
   height: 40px;
   cursor: pointer;
+
+  @media (--lg) {
+    display: none;
+  }
 }
 
 .line {
@@ -185,112 +242,145 @@
 
 .footer-content {
   display: grid;
-  grid-template-columns: 1rem repeat(4, 25%) 1rem;
-  grid-template-rows: 10rem 20rem 20rem;
+  grid-template-columns: repeat(2, 50%);
+  grid-template-rows: 10rem 1fr 20rem 20rem;
 
   grid-template-areas:
-    '. . . . toptop'
-    '. sponsor sponsor sponsor sponsor .'
-    '. sponsor sponsor sponsor sponsor .'
-    '. link volg  . contact .';
+    ' . totop '
+    ' sponsor sponsor '
+    ' volg  . '
+    ' contact .';
 
   color: var(--background-color);
 
-  .footer__link {
-    grid-area: link;
+  @media (--md) {
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: 10rem 20rem 20rem;
+
+    grid-template-areas:
+      '. . toptop'
+      'sponsor sponsor sponsor'
+      'link volg  contact';
+  }
+
+  @media (--lg) {
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: 10rem 20rem 20rem;
+
+    grid-template-areas:
+      '. . toptop'
+      'sponsor sponsor sponsor'
+      'link volg  contact';
+  }
+}
+
+.footer__link {
+  grid-area: link;
+  grid-column: 1;
+  grid-row: 6;
+  visibility: hidden;
+
+  @media (--md) {
+    grid-column: 1;
+    grid-row: 3;
+    visibility: visible;
+  }
+}
+
+.footer__volg {
+  grid-area: volg;
+  grid-column: 1;
+  grid-row: 4;
+
+  @media (--md) {
     grid-column: 2;
     grid-row: 3;
   }
+}
 
-  .footer__volg {
-    grid-area: volg;
+.footer__contact {
+  grid-area: contact;
+  grid-column: 1;
+  grid-row: 5;
+
+  @media (--md) {
     grid-column: 3;
     grid-row: 3;
   }
 
-  .footer__contact {
-    grid-area: contact;
-    grid-column: 5;
+  @media (--lg) {
+    grid-column: 4;
     grid-row: 3;
-  }
-
-  @media (--sm) {
-    display: grid;
-    grid-template-columns: repeat(2, 45%);
-    grid-template-rows: repeat(4, 20%);
-    grid-template-areas:
-      '. totop '
-      ' sponsors sponsors '
-      ' volg  .'
-      ' contact .';
-
-    .footer__link {
-      grid-area: link;
-      grid-column: 2;
-      grid-row: 3;
-    }
-
-    .footer__volg {
-      grid-area: volg;
-      grid-column: 3;
-      grid-row: 3;
-    }
-
-    .footer__contact {
-      grid-area: contact;
-      grid-column: 5;
-      grid-row: 3;
-    }
   }
 }
 
 .footer__sponsors {
   grid-area: sponsor;
-  grid-column: 2 / span 4;
-  grid-row: 1 / 3;
+  grid-column: 1 / 3;
+  grid-row: 2 / 4;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 10rem);
+  grid-template-columns: repeat(2, 45%);
+  grid-template-rows: repeat(3, 10rem);
   grid-template-areas:
-    ' . titel titel .'
-    'sponsors sponsors sponsors sponsors ';
-  align-items: center;
+    ' titel titel '
+    ' sponsors sponsors '
+    ' sponsors sponsors ';
 
-  @media (--sm) {
-    grid-template-columns: 1fr repeat(2, 45%) 1fr;
-    grid-template-rows: repeat(3, 10rem);
+  @media (--md) {
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
-      '. titel titel .'
-      '. sponsors sponsors .'
-      '. sponsors sponsors .';
+      ' . titel titel .'
+      'sponsors sponsors sponsors sponsors ';
+    align-items: center;
+  }
+
+  @media (--lg) {
+    grid-column: 1 / 5;
+    grid-row: 2 / 3;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+      ' . titel titel . '
+      'sponsors sponsors sponsors sponsors ';
+    align-items: center;
   }
 }
 
 .sponsors__titel {
   grid-area: titel;
-  grid-column: 2 / span 2;
+  grid-column: 1 / span 2;
   grid-row: 1;
   align-self: center;
   text-align: center;
+
+  @media (--md) {
+    grid-column: 2 / span 2;
+    grid-row: 1;
+  }
 }
 
 .sponsors {
   grid-area: sponsors;
   display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: 1fr;
-  grid-template-areas: '1 2 3 4 ';
+  grid-template-columns: repeat(2, 45%);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+    '1 2'
+    '3 4 ';
 
-  grid-column: 1 / span 6;
+  grid-column: 1 / span 2;
   grid-row: 2 / 3;
-  /*
-  @media (--sm) {
+
+  @media (--md) {
     grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-areas:
-      '1 2'
-      '3 4 ';
-  } */
+    grid-template-rows: 1fr;
+    grid-template-areas: '1 2 3 4';
+    grid-column: 1 / span 6;
+    grid-row: 2 / 3;
+  }
 }
 
 .een {
@@ -298,34 +388,69 @@
   grid-column: 1;
   grid-row: 1;
   text-align: left;
+
+  @media (--md) {
+    grid-column: 1;
+    grid-row: 1;
+    text-align: left;
+  }
 }
 
 .twee {
   grid-area: 2;
-  grid-column: 2;
-  grid-row: 1;
+  grid-column: 1;
+  grid-row: 2;
   text-align: left;
+
+  @media (--md) {
+    grid-column: 2;
+    grid-row: 1;
+    text-align: left;
+  }
 }
 
 .drie {
   grid-area: 3;
-  grid-column: 3;
-  grid-row: 1;
-  text-align: left;
+  grid-column: 2;
+  grid-row: 2;
+  text-align: right;
+
+  @media (--md) {
+    grid-column: 3;
+    grid-row: 1;
+    text-align: left;
+  }
 }
 
 .vier {
   grid-area: 4;
-  grid-column: 4;
+  grid-column: 2;
   grid-row: 1;
-  text-align: left;
+  text-align: right;
+
+  @media (--md) {
+    grid-column: 4;
+    grid-row: 1;
+    text-align: left;
+  }
 }
 
 .totop {
   grid-area: totop;
-  grid-column: 6;
+  grid-column: 2;
   grid-row: 1;
   padding-top: 2rem;
+  text-align: center;
+
+  @media (--md) {
+    grid-column: 3;
+    grid-row: 1;
+  }
+
+  @media (--lg) {
+    grid-column: 4;
+    grid-row: 1;
+  }
 }
 
 .totop__link {
