--- a/src/css/programma.css
+++ b/src/css/programma.css
@@ -150,7 +150,7 @@
 
   @media (--md) {
     display: grid;
-    grid-template-columns: 1f;
+    grid-template-columns: 1fr;
     grid-template-rows: 70% 30%;
     grid-template-areas:
       'toon filter'
@@ -353,6 +353,7 @@
   content: '\002B';
   display: block;
   position: absolute;
+  will-change: transform;
   transition: transform .3s ease-in-out;
 }
 
@@ -386,6 +387,7 @@
   content: '\2212';
   display: block;
   position: absolute;
+  will-change: transform;
   transform: rotate(-360deg);
   transition: transform .3s ease-in-out;
   /* overflow: hidden; */
