--- a/src/css/site-header.css
+++ b/src/css/site-header.css
@@ -241,6 +241,7 @@
   border-radius: 3px;
   transition-duration: .5s;
   transition-timing-function: ease-in-out;
+  will-change: transform;
   transform-origin: 50% 50%;
   animation-fill-mode: both;
   animation-duration: .1s;
