--- a/src/css/home.css
+++ b/src/css/home.css
@@ -100,30 +100,75 @@
 .spektakel {
   display: flex;
   flex-flow: column;
-  height: 70rem;
+  justify-content: space-evenly;
+  height: 107rem;
 
   @media (--md) {
-    height: 60rem;
+    height: 65rem;
     justify-content: space-evenly;
     align-items: center;
     padding-top: 5rem;
     padding-bottom: 10rem;
   }
+
+  @media (--lg) {
+    height: 75rem;
+  }
+
+  @media (--xl) {
+    height: 100rem;
+  }
+}
+
+.hide__mobile {
+  visibility: hidden;
+
+  @media (--md) {
+    display: block;
+  }
 }
 
 .spektakel__groep {
   display: flex;
-  justify-content: space-evenly;
-  flex-flow: row;
-  width: 100%;
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  flex-flow: column;
+
+  @media (--md) {
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: row;
+    width: 100%;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
+  @media (--lg) {
+    justify-content: space-between;
+  }
+
+  @media (--xl) {
+    justify-content: space-between;
+  }
 }
 
 .spektakel__lijn {
   border-left: .2rem solid var(--color-accent);
-  padding-left: 1rem;
-  width: 40rem;
+  padding-left: 2rem;
+  width: 100%;
+
+  @media (--md) {
+    width: 52.6rem;
+    padding-left: 4rem;
+  }
+
+  @media (--lg) {
+    padding-left: 3rem;
+    width: 57rem;
+  }
+
+  @media (--xl) {
+    width: 80rem;
+    padding-left: 8rem;
+  }
 }
 
 .spektakel__content {
@@ -201,7 +246,6 @@
 }
 
 .spektakel__hover {
-  /* transition: .5s ease; */
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -223,12 +267,27 @@
   background-color: var(--primary-color);
   display: flex;
   align-items: center;
+
+  @media (--lg) {
+    height: 56vh;
+  }
+
+  @media (--xl) {
+    height: 62vh;
+  }
 }
 
 .home__familiedag {
   display: flex;
   justify-content: space-between;
-  height: 40rem;
+
+  @media (--md) {
+    height: 50rem;
+  }
+
+  @media (--xl) {
+    height: 56rem;
+  }
 }
 
 .familiedag__lijn {
@@ -238,13 +297,37 @@
   background-size: 47% .4rem;
   background-position: 0 101%;
   width: 20rem;
-  height: 4rem;
+  height: 6.5rem;
+
+  @media (--md) {
+    color: var(--background-color);
+    background-image: linear-gradient(0deg, #e9bf4e 50%, #e9bf4e 50%);
+    background-repeat: no-repeat;
+    background-size: 47% .4rem;
+    background-position: 0 101%;
+    width: 20rem;
+    height: 8rem;
+  }
+
+  @media (--xl) {
+    height: 12rem;
+  }
 }
 
 .familiedag__info {
   display: flex;
   flex-flow: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  height: 49rem;
+
+  @media (--md) {
+    justify-content: space-evenly;
+    height: 100%;
+  }
+
+  @media (--lg) {
+    justify-content: space-between;
+  }
 }
 
 .familiedag__img {
@@ -275,8 +358,18 @@
 .familiedag__tekst {
   width: 30rem;
 
+  @media (--md) {
+    width: 32.9rem;
+  }
+
   @media (--lg) {
-    width: 36rem;
+    width: 44rem;
+    margin-right: 5rem;
+  }
+
+  @media (--xl) {
+    width: 69rem;
+    margin-right: 10rem;
   }
 }
 
@@ -289,10 +382,57 @@
   align-items: center;
   justify-content: space-evenly;
 
+  @media (--md) {
+    flex-flow: row;
+    align-items: flex-end;
+  }
+
   @media (--lg) {
+    height: 51vh;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
+  }
+
+  @media (--xl) {
+    height: 66vh;
+  }
+}
+
+.nieuwsbrief__titel {
+  overflow: hidden;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  justify-content: center;
+  height: 233vw;
+  align-items: flex-end;
+  background-image: url(./../assets/img/bg/nieuwsbrief4_100.webp);
+  background-position: -4rem -5rem;
+  position: absolute;
+  z-index: -1;
+
+  @media (--md) {
+    height: 59vw;
+    align-items: flex-end;
+    background-size: 104%;
+    background-image: url(./../assets/img/bg/nieuwsbrief3_100.webp);
+    background-position: -2rem 0;
+  }
+
+  @media (--lg) {
+    height: 64vw;
+    background-size: 108%;
+    background-image: url(./../assets/img/bg/nieuwsbrief2_100.webp);
+    background-position: -4rem 8rem;
+  }
+
+  @media (--xl) {
+    height: 65vw;
+    background-size: 103%;
+    background-image: url(./../assets/img/bg/nieuwsbrief1_100.webp);
+    background-position: -3rem 25rem;
   }
 }
 
@@ -319,8 +459,8 @@
 .nieuwsbrief__article {
   display: flex;
   flex-flow: column;
-  width: 30rem;
-  height: 25rem;
+  width: 29rem;
+  height: 41rem;
   justify-content: space-between;
 
   @media (--lg) {
